# enerby-dev

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  _headers  _redirects  index.html  input.css  notas.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
assets/: main.css  tailwind.css
content/blog/: ejemplo1.md  hexagonal.md  nuxt.md  post_1.en.md  post_1.es.md  post_1.md  post_2.en.md  post_2.es.md  post_2.md  post_3.en.md  post_3.es.md  post_3.md
docs/: ARCHITECTURE.md  COMPONENTS.md  CONTENT.md
docs/report_deploy/: opciones_deploy_rust_dioxus.md
scripts/: build.sh
src/: config.rs  construction.rs  data.rs  main.rs  routes.rs  utils.rs
src/components/: about.rs  animations.rs  atoms.rs  blog.rs  contact.rs  hero.rs  layout_components.rs  mod.rs  molecules.rs  projects.rs  seo.rs  skills.rs
src/components/blog/: mod.rs  post_content.rs  post_header.rs  post_navigator.rs
src/i18n/: dict.rs  mod.rs
src/i18n/locales/: en.rs  es.rs  mod.rs
src/layouts/: footer.rs  header.rs  mod.rs  root.rs
src/pages/: about.rs  blog.rs  contact.rs  home.rs  mod.rs  not_found.rs  projects.rs
src/tests/: component_tests.rs  config_tests.rs  data_tests.rs  mod.rs  utils_tests.rs
src/theme/: mod.rs
src/utils/: github_api.rs  github_cache.rs  github_stats.rs  markdown_loader.rs  mod.rs  project_images.rs
