[package]
name = "enerby-dev"
version = "0.1.0"
authors = ["enerBydev <rjmemdoza.s@gmail.com>"]
edition = "2024"
description = "enerby.dev - Portafolio personal de desarrollo de software"
repository = "https://github.com/enerBydev/enerby.dev"
license = "MIT"

[dependencies]
# Dioxus Core (Web SSG)
dioxus = { version = "0.7", features = ["web", "router"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilidades
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["web"]
web = []

# Perfil de release optimizado para web
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
